# xremap

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  UPGRADE.md  build_config.rb  example-xremap.service  flake.nix  mrbgem.rake  rustfmt.toml
.github/workflows/: build.yml  dependabot.yml
doc/: README.md  reference_actions.md  reference_chords.md  reference_config_options.md  reference_double_tap.md  reference_freebsd.md  reference_key_names.md  reference_multipurpose_key.md  reference_press_release_key.md  running_as_system_service.md  running_as_user_service.md  running_with_sudo.md  running_without_sudo.md  troubleshooting.md  use_case_mod_trigger.md  use_case_multipurpose_key.md  use_case_virtual_modifer.md  use_case_virtual_modifier.md
doc/kde-wayland/: README.md  kde-socket-helper.py  kde-socket-helper.service  xremap-tmpfiles.conf  xremap.service
example/: config.yml  emacs.yml  hotkey_test.yml  tablet.yml  test.yml  xremap.desktop  xremap.service
examples/: asus-keyboard.rb  emacs_binding.rb  emacs_like.rb  launcher.rb  macos.rb  multi_config.rb  slack.rb  window_switcher.rb
examples/systemd/: xkremap.service  xremap.service
mrblib/xkremap/: active_window.rb  config.rb  config_context.rb  config_dsl.rb  event_handler.rb  grab_manager.rb  key_expression.rb  key_grab_manager.rb  key_remap_builder.rb  key_remap_compiler.rb
mrblib/xremap/: active_window.rb  config.rb  config_dsl.rb  event_handler.rb  grab_manager.rb  key_expression.rb  key_remap_compiler.rb
nix-flake/: README.md  flake.nix
nix-flake/modules/: default.nix
nix-flake/overlay/: default.nix
src/: action.rs  action_dispatcher.rs  args.rs  command.rs  command_runner.rs  config.rs  device.rs  display.c  e2e_end_to_end.rs  e2e_tests.rs  emit_handler.rs  event.rs  event_handler.rs  input.rs  lib.rs  main.c  main.rs  main_controller.rs  operator_double_tap.rs  operator_handler.rs  operator_sim.rs  operators.rs  output.rs  select.rs  tests.rs  tests_any_key.rs  tests_disguised_events_in.rs  tests_disguised_events_out.rs  tests_escape_next_key.rs  tests_extra_modifiers.rs  tests_keymap_mark.rs  tests_keymap_mode.rs  tests_keymap_modifier_triggers.rs  tests_modmap_keys.rs  tests_modmap_mul_purpose.rs  tests_modmap_mul_purpose_tap_preferred.rs  tests_modmap_press_release_key.rs  tests_nested_remap.rs  tests_operator_double_tap.rs  tests_operator_handler.rs  (+12 more)
src/bridge/: bridge_main.rs  mod.rs  types.rs
src/client/: cosmic_client.rs  ewm_client.rs  gnome_client.rs  hypr_client.rs  kde_client.rs  kwin-script.js  mod.rs  niri_client.rs  null_client.rs  pantheon_client.rs  socket_client.rs  socket_monitor.rs  sway_client.rs  wlroots_client.rs  x11_client.rs
src/client/cosmic_protocols/: cosmic-toplevel-info-unstable-v1.xml  cosmic-toplevel-management-unstable-v1.xml  mod.rs  protocol_macro.rs
src/client/kde/: adhoc_script_handler.rs  kde_client.rs  kwin-script-one-off.js  kwin-script.js  kwin_scripts.rs  mod.rs  plugin_script_handler.rs
src/config/: absconfig.rs  action.rs  actions.rs  application.rs  deserializers.rs  device.rs  expmap.rs  expmap_operator.rs  expmap_simkey.rs  hotkey.rs  key.rs  key_action.rs  key_press.rs  keyboard_layout.rs  keymap.rs  keymap_action.rs  keypress.rs  mod.rs  modmap.rs  modmap_action.rs  modmap_operator.rs  nested_remap.rs  remap.rs  tests.rs  validation.rs  watcher.rs  wm_class.rs
src/event_handler/: dispatch.rs  matching.rs  mod.rs  multipurpose.rs  override.rs  state.rs  tests.rs
src/platform_freebsd/: config_watcher.rs  device_watcher.rs
src/platform_linux/: config_watcher.rs  device_watcher.rs  mod.rs
tests/: configuration.rs  controller.rs  device.rs  device_1.rs  device_2.rs  device_3.rs  keyboard.rs  modmap.rs  operators.rs  watch-config.rs  watch.rs
tests/common/: config-test.yml  inputevent_formatter.rs  mod.rs  xremap_controller.rs
tools/xkremap/: config.c  event_handler.c  main.c  remap.c  xkremap.c  xkremap.h
tools/xremap/: config.c  event_handler.c  main.c  xremap.h
