[package]
name = "xremap"
version = "0.10.0"
edition = "2021"
description = "Dynamic key remapp for X and Wayland"
license = "MIT"
repository = "https://github.com/k0kubun/xremap"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.3.19", features = ["derive"] }
clap_complete = "4.3.2"
derive-where = "1.2.7"
env_logger = "0.10.2"
evdev = "0.12.1"
fork = "0.1"
indoc = "2.0"
lazy_static = "1.4.0"
log = "0.4.22"
nix = "0.26.2"
regex = "1.10.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["chrono"] }
serde_yaml = "0.9"
wayland-client = { version = "0.30", optional = true }
wayland-protocols-wlr = { version = "0.1", features = ["client"], optional = true }
x11rb = { version = "0.13.1", optional = true }
zbus = { version = "1.9.2", optional = true }
toml = "0.8.13"

[features]
gnome = ["zbus"]
x11 = ["x11rb"]
kde = ["zbus"]
wlroots = ["wayland-client", "wayland-protocols-wlr"]
