[package]
name = "xremap"
version = "0.14.12"
edition = "2021"
description = "Dynamic key remapp for X and Wayland"
license = "MIT"
repository = "https://github.com/k0kubun/xremap"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.3.19", features = ["derive"] }
clap_complete = "4.3.2"
derive-where = "1.6.0"
env_logger = "0.11.6"
evdev = "0.13.2"
fork = "0.6"
futures-util = {version = "0.3", optional = true}
indoc = "2.0"
lazy_static = "1.5.0"
log = "0.4.29"
nix = "0.26.2"
niri-ipc = { version = "25.11.0", optional = true }
regex = "1.12.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.8", features = ["chrono"] }
serde_yaml = "0.9"
wayland-client = { version = "0.30", optional = true }
wayland-protocols-wlr = { version = "0.1", features = ["client"], optional = true }
x11rb = { version = "0.13.2", optional = true }
zbus = { version = "5.12.0", optional = true }
hyprland = { version = "0.4.0-beta.3", optional = true }
toml = "0.9.10"
udev = { version = "0.9.3", optional = true }
futures = "0.3.31"
wayland-protocols = { version = "0.32.10", features = ["client"], optional = true }
wayland-scanner = { version = "0.30.0", optional = true }
wayland-backend = { version = "0.1.0", optional = true }
tokio = { version = "1.49.0", optional = true, features = ["full"] }

[dev-dependencies]
fastrand = "2.3.0"

[features]
gnome = ["zbus"]
x11 = ["x11rb"]
hypr = ["hyprland"]
kde = ["zbus"]
wlroots = ["wayland-client", "wayland-protocols-wlr"]
udev = ["dep:udev"]
niri = ["niri-ipc"]
device-test = []
cosmic = [ "wayland-client","wayland-scanner","wayland-backend"]
socket = ["futures-util", "tokio", "zbus", "zbus/tokio"]

[profile.release]
codegen-units = 1
lto = true
